# NewOD

./: .gitignore  Cargo.toml  Colleague_A_analysis.md  GAP-010_GC_team_writeup.md  GAP-011_GC_team_writeup.md  README.md  colleague_B_analysis.md  commit-msg.tmp  next_steps.md  re-start.md
.cargo/: config.toml
data/: win32_constants.txt
docs/: ARCHITECTURE.md  COMPILER_GAPS.md  DEFERRED.md  DFM.md  DYLAN_AST_WIRE.md  GC.md  HOW_IDE_SHELL_WORKS.md  MACROS.md  MACRO_BOUNDARY.md  MANIFESTO.md  PLAN.md  SEALING.md  SPRINTS.md  gc_implementation_single_thread.md  performance_and_harding_overview.md  tracing_guide.md
docs/journal/: 2026-05-31-dylan-to-ast-translator.md  2026-05-31-parser-kind-coverage.md  2026-06-02-class-id-drift-attempt-rejected.md  2026-06-02-doccrate-manual.md  2026-06-02-macro-engine-to-dylan-52.md  2026-06-03-sema-in-dylan-53.md  2026-06-05-consolidation-and-plan.md  2026-06-06-gap011-2-codegen-wrong-value-diagnosis.md  2026-06-06-gap011-stretchy-vector-mid-grow-root-staleness.md  2026-06-10-sprint-56a-class-derivation-live-verify.md  README.md
docs/manual/: glossary.md
docs/manual/compiler/: jit-and-aot.md  macro-expander.md  self-hosting.md  sema.md
src/nod-dfm/: Cargo.toml
src/nod-dfm/src/: format.rs  ir.rs  lib.rs  liveness.rs  parse.rs
src/nod-driver/: Cargo.toml  build.rs
src/nod-driver/src/: dylan_lex_jit.rs  dylan_parse_wire.rs  dylan_to_ast.rs  main.rs  project.rs
src/nod-dylan/dylan-sources/: README.md  stdlib.dylan  win32-constants.dylan
src/nod-llvm/: Cargo.toml
src/nod-llvm/src/: aot.rs  cache.rs  codegen.rs  jit.rs  jit_mm.rs  lib.rs
src/nod-macro/: Cargo.toml
src/nod-macro/src/: lib.rs
src/nod-namespace/: Cargo.toml
src/nod-namespace/src/: graph.rs  lib.rs
src/nod-reader/src/: ast.rs  format_dylan.rs  lexer.rs  lib.rs  parser.rs
src/nod-runtime/: Cargo.toml
src/nod-runtime/src/: aot.rs  aot_user_main_stub.rs  c_types.rs  callbacks.rs  classes.rs  closures.rs  collections.rs  com_shim.rs  conditions.rs  crash_dump.rs  dispatch.rs  format_out.rs  functions.rs  heap.rs  heap_common.rs  lib.rs  lists.rs  make.rs  safepoint_poll.rs  stack_map.rs  strings.rs  structs.rs  symbols.rs  tables.rs  vectors.rs  winffi.rs  word.rs  wrapper.rs
src/nod-sema/: Cargo.toml
src/nod-sema/src/: lib.rs  lower.rs  sidecar.rs  stdlib.rs
src/nod-sema/src/optimise/: dispatch.rs  narrowing.rs
src/nod-winapi/: build.rs
src/nod-winapi/src/: lib.rs
src/nod-winapi/tests/: lookup.rs
tests/nod-od-suite/: Cargo.toml
tests/nod-od-suite/fixtures/: gc-rope-file-load.dylan
tests/nod-od-suite/src/: lib.rs
tests/nod-od-suite/tests/: run.rs
tests/nod-tests/: Cargo.toml
tests/nod-tests/fixtures/: dylan-lex-shim.dylan  dylan-lex-shim.prj  dylan-lexer.dylan  dylan-lower.dylan  dylan-macro-collect.prj  dylan-macro-expand.dylan  dylan-macro-expand.prj  dylan-macro-file.prj  dylan-macro-match.prj  dylan-macro-smoke.dylan  dylan-macro-smoke.prj  dylan-macro-walk.dylan  dylan-macro-walk.prj  dylan-macro.dylan  dylan-parser.dylan  dylan-sema.dylan  dylan-sema.prj  ide_helpers.dylan  ide_rope.dylan  ide_syntax.dylan  lower-class-accessors.dylan  lower-shortcircuit.dylan  nod-ide.dylan  point.dylan  richards-shape-open.dylan  richards-shape.dylan  rope.dylan
tests/nod-tests/src/: lib.rs
tests/nod-tests/tests/: aot_dylan.rs  aot_exe.rs  aot_ide_shell.rs  c_function_call.rs  c_function_parse.rs  classes_dumps.rs  closures.rs  codegen.rs  collections.rs  dylan_lexer.rs  dylan_parse_coverage.rs  dylan_parse_translate.rs  dylan_parser.rs  first_class_functions.rs  funcall_arity.rs  gap_007_stale_locals.rs  gc.rs  gc_precise.rs  gc_stress.rs  ide_shell.rs  jit_cache_xprocess.rs  jit_cache_xprocess_eval.rs  macro_engine.rs  macro_expand.rs  macro_walk.rs  macros.rs  parser.rs  rope_ops.rs  runtime.rs  sema.rs  sema_lower_if_repro.rs  sema_topnames.rs  short_circuit_ops.rs  tables.rs  winffi_materialize.rs  winffi_structs.rs
