[workspace]
members = [
    "src/nod-driver",
    "src/nod-reader",
    "src/nod-macro",
    "src/nod-namespace",
    "src/nod-sema",
    "src/nod-dfm",
    "src/nod-opt",
    "src/nod-llvm",
    "src/nod-loader",
    "src/nod-runtime",
    "src/nod-dylan",
    "tests/nod-tests",
    "tests/nod-od-suite",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.0.1"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

# Shared dependencies. Versions and LLVM pinning chosen to match the
# sibling-compiler portfolio (NewM2, NewCormanLisp) so the JIT memory
# manager, GC, and codegen helpers can be lifted across projects
# without version drift. Bump in lockstep with NewM2 / NCL.
[workspace.dependencies]
clap        = { version = "4.5", features = ["derive"] }
serde_json  = "1"
# Sprint 06 will activate these:
inkwell     = { version = "=0.9.0", features = ["llvm22-1"] }
llvm-sys    = { version = "=221.0.1", features = ["force-static"] }
# Sprint 23: NewGC page-based mark-evacuate generational collector,
# bound into nod-runtime via the `HeapLayout` trait. `default-features
# = false` drops the conservative-pin scanner — Dylan is a precise-
# roots client via the Sprint 11c lock-free root registry.
newgc-core  = { path = "../../NewGC/crates/newgc-core", default-features = false }
