[workspace]
members = [
    "src/nod-driver",
    "src/nod-reader",
    "src/nod-macro",
    "src/nod-namespace",
    "src/nod-sema",
    "src/nod-dfm",
    "src/nod-opt",
    "src/nod-llvm",
    "src/nod-loader",
    "src/nod-runtime",
    "src/nod-dylan",
    "src/nod-winapi",
    "tests/nod-tests",
    "tests/nod-od-suite",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.0.1"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

# Shared dependencies. Versions and LLVM pinning chosen to match the
# sibling-compiler portfolio (NewM2, NewCormanLisp) so the JIT memory
# manager, GC, and codegen helpers can be lifted across projects
# without version drift. Bump in lockstep with NewM2 / NCL.
[workspace.dependencies]
clap        = { version = "4.5", features = ["derive"] }
serde_json  = "1"
# Sprint 06 will activate these:
inkwell     = { version = "=0.9.0", features = ["llvm22-1"] }
llvm-sys    = { version = "=221.0.1", features = ["force-static"] }
# Sprint 23: NewGC page-based mark-evacuate generational collector,
# bound into nod-runtime via the `HeapLayout` trait. `default-features
# = false` drops the conservative-pin scanner — Dylan is a precise-
# roots client via the Sprint 11c lock-free root registry.
#
# PINNED to a specific NewGC commit (was a live `path` into the GC
# team's working tree, which moved underneath our build mid-session).
# Cargo snapshots this rev into its git cache; the GC team's ongoing
# multi-mutator testing/changes can't affect us until we deliberately
# bump `rev`. 22ec0e7 is "Fix GAP-010: dirty-card scan corrupted
# byte-string opaque payloads" — the object-aware reservation card
# scan that fixes the AOT byte-string-relocation crash (was b66726a).
# To adopt a new GC release: bump `rev`, rebuild, re-run the gates.
newgc-core  = { git = "file:///E:/NewGC", rev = "22ec0e7e692ac468fc7682f0aacb9683d01c1688", default-features = false }
