[package]
name        = "nod-driver"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "NewOpenDylan compiler driver (CLI entrypoint)."

[lints]
workspace = true

[dependencies]
clap          = { workspace = true }
nod-reader    = { path = "../nod-reader" }
nod-namespace = { path = "../nod-namespace" }
nod-sema      = { path = "../nod-sema" }
