[package]
name        = "nod-runtime"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "NewOpenDylan: tagged-pointer ABI, wrapper headers, bump heap, class metadata."

[features]
# Sprint 23: GC backend selection.
#
# - `newgc-backend` (default): `PageHeap<DylanLayout>` from
#   `newgc-core`. Page-based mark-evacuate generational collector.
# - `semispace-backend`: the pre-Sprint-23 lifted-from-NCL semispace
#   heap. Kept as an escape hatch for one sprint per the
#   Sprint 23 brief; Sprint 24 will delete it if NewGC sticks.
#
# Exactly one must be enabled. Selecting both or neither is a
# `compile_error!` at the top of `lib.rs`.
default = ["newgc-backend"]
newgc-backend = ["dep:newgc-core"]
semispace-backend = []

[dependencies]
newgc-core = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }
# Sprint 35: typed COM bindings for DXGI / D3D11 / D2D / DirectWrite.
# The `windows` crate (vs `windows-sys`) provides refcount-correct
# wrappers — every interface type implements `Clone` (calls AddRef)
# and `Drop` (calls Release), so a Rust-side `HashMap<u64, ComObject>`
# is sufficient to own and lifetime-manage the GPU resources Dylan
# refers to by opaque <c-handle>. Feature selection follows the
# minimum surface area for offscreen-only Sprint 35:
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Foundation_Numerics",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Sprint 32: in-module callbacks unit tests must run serially since
# they mutate the process-global callback registry. The test-runner
# default runs tests in parallel across threads.
serial_test = "3"

[lints]
workspace = true
