[package]
name        = "nod-od-suite"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "NewOpenDylan: curated OpenDylan-flavoured fixture regression suite."

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dev-dependencies]
nod-sema = { path = "../../src/nod-sema" }
serial_test = "3"
