[package]
name        = "nod-tests"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "NewOpenDylan: end-to-end integration tests."

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dev-dependencies]
nod-reader = { path = "../../src/nod-reader" }
